--- a/1_HTML_LESSON/text.html
+++ b/1_HTML_LESSON/text.html
@@ -7,30 +7,54 @@
     <title>HTML Ch2</title>
   </head>
   <body>
+    
     <h1>This is the Main Heading</h1>
-    <br />
-    <hr />
     <p>
       This text might be an introduction to the rest of the page. And if the
       page is a long one it might be split up into several sub-headings.
     </p>
+    <hr />
+
     <h2>This is a sub-heading</h2>
     <p>
-     <blockquote> Many long articles have sub-headings so to help you follow the structure
+      Many long articles have sub-headings so to help you follow the structure
       of what is being written. There may even be sub-sub-headings (or
-      lower-level headings).</blockquote>  <blockquote> Many long articles have sub-headings so to help you follow the structure
-      of what is being written. There may even be sub-sub-headings (or
-      lower-level headings).</blockquote>
+      lower-level headings).
     </p>
-    <h3>2<sup>nd</sup> Sub-Heading</h3>
+    <p>What should this be?</p>
+
+    <h2>Another Sub-Heading</h2>
     <p>
-      <q
-        >Here you can see <em>another</em> sub-heading. But should this be a
-        heading? Probably not. Too much text for a heading.</q
-      >
+      Here you can see another sub-heading. But should this be a heading?
+      Probably not. Too much info/text now. <br />
+      right?
     </p>
-    <span><strong>Right?</strong></span>
-    <b>BOLD O<sub>2</sub></b> <strong>bold</strong> <i>ITALIC</i>
-    <em>italic</em>
+    <br />
+    <br />
+
+    <h2>And Another Sub-Heading</h2>
+    <p>
+      More headings?? Here you can see another sub-heading. You know what to do
+      now. Let's use a proper tag.
+    </p>
+
+    <h2>Yet Another Sub-Heading</h2>
+    <p>
+      That's a lot of headings. Here you can see another sub-heading. You know
+      what to do now. Make this <strong>WORD</strong> strong aka <b>bold</b>.
+      Give it a proper tag!
+    </p>
+    <hr />
+
+    <p>
+      Today is the 4<sup>th</sup> of July and there is a lot of CO<sub>2</sub>
+      in the air. 
+      <p>In case you were wondering, here is <abbr title="Professor"></abbr>Prof John Doe's address!
+       <br> <br>John Doe <br>14000 Fruitvale Ave<br>Saratoga, CA 95070
+</p>
+
+      <hr>
+      <span><strong>ASSIGNMENT - <q><i>Structuring information into a HTML document </q></i> | Ravneet</strong></span>
+    </p>
   </body>
 </html>
