--- a/1_HTML_LESSON/StructuringInfoIntoHTMLDoc_Ravneet.html
+++ b/1_HTML_LESSON/StructuringInfoIntoHTMLDoc_Ravneet.html
@@ -15,7 +15,7 @@
     </p>
     <hr />
 
-    <h2>This is a sub-heading</h2>
+    <h2>This is a Sub-Heading</h2>
     <p>
       Many long articles have sub-headings so to help you follow the structure
       of what is being written. There may even be sub-sub-headings (or
@@ -50,7 +50,7 @@
       Today is the 4<sup>th</sup> of July and there is a lot of CO<sub>2</sub>
       in the air. 
       <p>In case you were wondering, here is <abbr title="Professor"></abbr>Prof John Doe's address!
-       <br> <br>John Doe <br>14000 Fruitvale Ave<br>Saratoga, CA 95070
+        <address>John Doe <br>14000 Fruitvale Ave<br>Saratoga, CA 95070 </address>
 </p>
 
       <hr>
