--- a/Ch2 Text/StructuringInfoIntoHTMLDoc_Ravneet.html
+++ b/Ch2 Text/StructuringInfoIntoHTMLDoc_Ravneet.html
@@ -54,7 +54,7 @@
 </p>
 
       <hr>
-      <span><strong>ASSIGNMENT - <q><i>Structuring information into a HTML document </q></i> | Ravneet</strong></span>
+      <span><strong>ASSIGNMENT - <q><i> <ins> Structuring information into a HTML document </ins></q></i> | Ravneet</strong></span>
     </p>
   </body>
 </html>
