--- a/Ch2 Text/StructuringInfoIntoHTMLDoc_Ravneet.html
+++ b/Ch2 Text/StructuringInfoIntoHTMLDoc_Ravneet.html
@@ -13,6 +13,9 @@
       This text might be an introduction to the rest of the page. And if the
       page is a long one it might be split up into several sub-headings.
     </p>
+
+    <!-- add a long line here -->
+
     <hr />
 
     <h2>This is a Sub-Heading</h2>
@@ -29,6 +32,11 @@
       Probably not. Too much info/text now. <br />
       right?
     </p>
+
+    <!-- add a few "breaks" here to create some space! **hint** you can also use these to break 
+     sentences into new lines... as it was intended to be used! try using one in the middle of 
+     a paragraph and see what happens in your browser-->
+
     <br />
     <br />
 
@@ -44,12 +52,23 @@
       what to do now. Make this <strong>WORD</strong> strong aka <b>bold</b>.
       Give it a proper tag!
     </p>
+
+    <!-- add a long line here -->
+
     <hr />
+
+    <!-- add the proper tags to change "th" and "2" below -->
 
     <p>
       Today is the 4<sup>th</sup> of July and there is a lot of CO<sub>2</sub>
       in the air. 
+
+      <!-- try using the "abbr" tag just like it's used in the book for the line below --> 
+
       <p>In case you were wondering, here is <abbr title="Professor"></abbr>Prof John Doe's address!
+
+        <!-- Make each line for the address appears on a new line, starting with the name -->
+
         <address>John Doe <br>14000 Fruitvale Ave<br>Saratoga, CA 95070 </address>
 </p>
 
